project/logs/20250523_003940.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Hello,DirectX!

clintSize:1280,720

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:31:27: error: use of undeclared identifier 'input'
    output.position = mul(input.position,gTransformationMatrix.WVP);
                          ^

